<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/pgCurrent"
        android:textSize="40sp"
        android:onClick="damage"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/pgCurrent"
        android:layout_toStartOf="@+id/pgCurrent"
        android:id="@+id/basicInfoContainer"
        android:layout_alignBottom="@+id/pgCurrent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/adventurer_name"
            android:id="@+id/nameText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/race_name"
            android:id="@+id/raceText"
            android:layout_alignTop="@+id/classText"
            android:layout_toRightOf="@+id/classText"
            android:layout_toEndOf="@+id/classText"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/class_name"
            android:id="@+id/classText"
            android:layout_below="@+id/nameText"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/level"
            android:id="@+id/lvlText"
            android:layout_alignParentBottom="false"
            android:layout_toRightOf="@+id/raceText"
            android:layout_toEndOf="@+id/raceText"
            android:layout_alignTop="@+id/raceText"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/lvl"
            android:layout_alignParentBottom="false"
            android:layout_toRightOf="@+id/lvlText"
            android:layout_toEndOf="@+id/lvlText"
            android:layout_alignTop="@+id/lvlText"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basicInfoContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/curativeEffortsContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/curativeEffortsText"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/curativeEffortsContainer"
        android:id="@+id/thirdLayout"
        android:columnCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/FUE"
            android:hint="@string/FUE" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/CON"
            android:hint="@string/CON" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/DES"
            android:hint="@string/DES" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/INT"
            android:hint="@string/INT" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/SAB"
            android:hint="@string/SAB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace"
            android:ems="4"
            android:layout_row="1"
            android:layout_column="2"
            android:id="@+id/CAR"
            android:hint="@string/CAR" />
    </GridLayout>


</RelativeLayout>
