<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ddns.kauron.dungeonmanager.Introduction">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNameIntro"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/adventurer_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editRaceIntro"
        android:hint="@string/race_name"
        android:layout_below="@+id/editNameIntro"
        android:layout_toRightOf="@+id/editClassIntro"
        android:layout_toEndOf="@+id/editClassIntro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editClassIntro"
        android:layout_below="@+id/editNameIntro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/class_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editLevelIntro"
        android:hint="@string/level"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/editNameIntro"
        android:layout_alignRight="@+id/editRaceIntro"
        android:layout_alignEnd="@+id/editRaceIntro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editMaxPgIntro"
        android:hint="@string/max_pg"
        android:width="70dp"
        android:layout_below="@+id/editClassIntro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editMaxEffortIntro"
        android:layout_toStartOf="@+id/editMaxEffortIntro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editMaxEffortIntro"
        android:hint="@string/max_curative_efforts"
        android:layout_below="@+id/editRaceIntro"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editPgIntro"
        android:width="70dp"
        android:hint="@string/pg"
        android:layout_below="@+id/editMaxPgIntro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editEffortIntro"
        android:layout_toStartOf="@+id/editEffortIntro" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editEffortIntro"
        android:layout_below="@+id/editMaxEffortIntro"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/curative_efforts" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classSpinner"
        android:layout_below="@+id/editPgIntro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/raceSpinner"
        android:layout_below="@+id/classSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
